// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HuePicker components basic render 1`] = `
<View
  disalbedThumbOpacity={0.4}
  hideThumb={false}
  offsetAngle={0}
  onChange={[Function]}
  onGrant={[Function]}
  onMove={[Function]}
  onPress={[Function]}
  onRelease={[Function]}
  opacityAnimationDuration={150}
  opacityAnimationValue={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 540,
        "justifyContent": "center",
        "width": 540,
      },
      undefined,
    ]
  }
  touchOffset={0}
  touchThumbRadius={0}
  value={0}
>
  <AnimatedComponent
    style={
      Object {
        "height": 540,
        "opacity": 1,
        "width": 540,
      }
    }
  >
    <ConicalGradent
      colors={
        Array [
          Object {
            "angle": 0,
            "color": "#FF0000",
          },
          Object {
            "angle": 0.5215043804959056,
            "color": "#FF007F",
          },
          Object {
            "angle": 1.049291946298991,
            "color": "#FF00FF",
          },
          Object {
            "angle": 1.5707963267948966,
            "color": "#7F00FF",
          },
          Object {
            "angle": 2.092300707290802,
            "color": "#0000FF",
          },
          Object {
            "angle": 2.6200882730938875,
            "color": "#007FFF",
          },
          Object {
            "angle": 3.141592653589793,
            "color": "#00FFFF",
          },
          Object {
            "angle": 3.6630970340856988,
            "color": "#00FF7F",
          },
          Object {
            "angle": 4.1908845998887845,
            "color": "#00FF00",
          },
          Object {
            "angle": 4.71238898038469,
            "color": "#7FFF00",
          },
          Object {
            "angle": 5.233893360880595,
            "color": "#FFFF00",
          },
          Object {
            "angle": 5.761680926683681,
            "color": "#FF7F00",
          },
        ]
      }
      innerRadius={150}
      offsetAngle={0}
      outerRadius={270}
      segmentAngle={0.017453292519943295}
    />
  </AnimatedComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 540,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 540,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FF0000",
            "borderColor": "#fff",
            "borderRadius": 56,
            "borderWidth": 8,
            "height": 112,
            "opacity": 1,
            "transform": Array [
              Object {
                "translateX": 210,
              },
              Object {
                "translateY": -0,
              },
            ],
            "width": 112,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    accessibilityLabel="huePicker"
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-only"
    style={
      Object {
        "height": 540,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 540,
      }
    }
  />
</View>
`;

exports[`HuePicker components componentWillReceiveProps render 1`] = `
<View
  disalbedThumbOpacity={0.4}
  hideThumb={false}
  offsetAngle={0}
  onChange={[Function]}
  onGrant={[Function]}
  onMove={[Function]}
  onPress={[Function]}
  onRelease={[Function]}
  opacityAnimationDuration={150}
  opacityAnimationValue={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 540,
        "justifyContent": "center",
        "width": 540,
      },
      undefined,
    ]
  }
  touchOffset={0}
  touchThumbRadius={0}
  value={0}
>
  <AnimatedComponent
    style={
      Object {
        "height": 540,
        "opacity": 1,
        "width": 540,
      }
    }
  >
    <ConicalGradent
      colors={
        Array [
          Object {
            "angle": 0,
            "color": "#FF0000",
          },
          Object {
            "angle": 0.5215043804959056,
            "color": "#FF007F",
          },
          Object {
            "angle": 1.049291946298991,
            "color": "#FF00FF",
          },
          Object {
            "angle": 1.5707963267948966,
            "color": "#7F00FF",
          },
          Object {
            "angle": 2.092300707290802,
            "color": "#0000FF",
          },
          Object {
            "angle": 2.6200882730938875,
            "color": "#007FFF",
          },
          Object {
            "angle": 3.141592653589793,
            "color": "#00FFFF",
          },
          Object {
            "angle": 3.6630970340856988,
            "color": "#00FF7F",
          },
          Object {
            "angle": 4.1908845998887845,
            "color": "#00FF00",
          },
          Object {
            "angle": 4.71238898038469,
            "color": "#7FFF00",
          },
          Object {
            "angle": 5.233893360880595,
            "color": "#FFFF00",
          },
          Object {
            "angle": 5.761680926683681,
            "color": "#FF7F00",
          },
        ]
      }
      innerRadius={150}
      offsetAngle={0}
      outerRadius={270}
      segmentAngle={0.017453292519943295}
    />
  </AnimatedComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 540,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 540,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FF0000",
            "borderColor": "#fff",
            "borderRadius": 56,
            "borderWidth": 8,
            "height": 112,
            "opacity": 1,
            "transform": Array [
              Object {
                "translateX": 210,
              },
              Object {
                "translateY": -0,
              },
            ],
            "width": 112,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    accessibilityLabel="huePicker"
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-only"
    style={
      Object {
        "height": 540,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 540,
      }
    }
  />
</View>
`;

exports[`HuePicker components render touch 1`] = `
<View
  disalbedThumbOpacity={0.4}
  hideThumb={false}
  offsetAngle={0}
  onChange={[Function]}
  onGrant={[Function]}
  onMove={[Function]}
  onPress={[Function]}
  onRelease={[Function]}
  opacityAnimationDuration={150}
  opacityAnimationValue={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 540,
        "justifyContent": "center",
        "width": 540,
      },
      undefined,
    ]
  }
  touchOffset={0}
  touchThumbRadius={0}
  value={300}
>
  <AnimatedComponent
    style={
      Object {
        "height": 540,
        "opacity": 1,
        "width": 540,
      }
    }
  >
    <ConicalGradent
      colors={
        Array [
          Object {
            "angle": 0,
            "color": "#FF0000",
          },
          Object {
            "angle": 0.5215043804959056,
            "color": "#FF007F",
          },
          Object {
            "angle": 1.049291946298991,
            "color": "#FF00FF",
          },
          Object {
            "angle": 1.5707963267948966,
            "color": "#7F00FF",
          },
          Object {
            "angle": 2.092300707290802,
            "color": "#0000FF",
          },
          Object {
            "angle": 2.6200882730938875,
            "color": "#007FFF",
          },
          Object {
            "angle": 3.141592653589793,
            "color": "#00FFFF",
          },
          Object {
            "angle": 3.6630970340856988,
            "color": "#00FF7F",
          },
          Object {
            "angle": 4.1908845998887845,
            "color": "#00FF00",
          },
          Object {
            "angle": 4.71238898038469,
            "color": "#7FFF00",
          },
          Object {
            "angle": 5.233893360880595,
            "color": "#FFFF00",
          },
          Object {
            "angle": 5.761680926683681,
            "color": "#FF7F00",
          },
        ]
      }
      innerRadius={0}
      offsetAngle={0}
      outerRadius={270}
      segmentAngle={0.017453292519943295}
    />
  </AnimatedComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 540,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 540,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FF00FF",
            "borderColor": "#fff",
            "borderRadius": 56,
            "borderWidth": 8,
            "height": 112,
            "opacity": 1,
            "transform": Array [
              Object {
                "translateX": 67.50000000000001,
              },
              Object {
                "translateY": 116.9134295108992,
              },
            ],
            "width": 112,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    accessibilityLabel="huePicker"
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-only"
    style={
      Object {
        "height": 540,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 540,
      }
    }
  />
</View>
`;

exports[`HuePicker components render touch disabled 1`] = `
<View
  disalbedThumbOpacity={0.4}
  hideThumb={false}
  offsetAngle={0}
  onChange={[Function]}
  onGrant={[Function]}
  onMove={[Function]}
  onPress={[Function]}
  onRelease={[Function]}
  opacityAnimationDuration={150}
  opacityAnimationValue={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 540,
        "justifyContent": "center",
        "width": 540,
      },
      undefined,
    ]
  }
  touchOffset={0}
  touchThumbRadius={0}
  value={300}
>
  <AnimatedComponent
    style={
      Object {
        "height": 540,
        "opacity": 1,
        "width": 540,
      }
    }
  >
    <ConicalGradent
      colors={
        Array [
          Object {
            "angle": 0,
            "color": "#FF0000",
          },
          Object {
            "angle": 0.5215043804959056,
            "color": "#FF007F",
          },
          Object {
            "angle": 1.049291946298991,
            "color": "#FF00FF",
          },
          Object {
            "angle": 1.5707963267948966,
            "color": "#7F00FF",
          },
          Object {
            "angle": 2.092300707290802,
            "color": "#0000FF",
          },
          Object {
            "angle": 2.6200882730938875,
            "color": "#007FFF",
          },
          Object {
            "angle": 3.141592653589793,
            "color": "#00FFFF",
          },
          Object {
            "angle": 3.6630970340856988,
            "color": "#00FF7F",
          },
          Object {
            "angle": 4.1908845998887845,
            "color": "#00FF00",
          },
          Object {
            "angle": 4.71238898038469,
            "color": "#7FFF00",
          },
          Object {
            "angle": 5.233893360880595,
            "color": "#FFFF00",
          },
          Object {
            "angle": 5.761680926683681,
            "color": "#FF7F00",
          },
        ]
      }
      innerRadius={150}
      offsetAngle={0}
      outerRadius={270}
      segmentAngle={0.017453292519943295}
    />
  </AnimatedComponent>
  <View
    style={
      Object {
        "alignItems": "center",
        "height": 540,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 540,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FF00FF",
            "borderColor": "#fff",
            "borderRadius": 56,
            "borderWidth": 8,
            "height": 112,
            "opacity": 0,
            "transform": Array [
              Object {
                "translateX": 105.00000000000003,
              },
              Object {
                "translateY": 181.8653347947321,
              },
            ],
            "width": 112,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    accessibilityLabel="huePicker"
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-only"
    style={
      Object {
        "height": 540,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 540,
      }
    }
  />
</View>
`;
